[package]
authors = ["Eric Kidd <git@randomhacks.net>"]
description = "Use the POSIX exec function to replace the running program with another"
documentation = "http://faradayio.github.io/exec-rs/exec/index.html"
license = "MIT/Apache-2.0"
name = "exec"
readme = "README.md"
repository = "https://github.com/faradayio/exec-rs"
version = "0.1.0"

[dependencies]
errno = "0.1.6"
libc = "0.2.8"

[features]
unstable = []
